reports/P03-strings.log
Traceback (most recent call last):
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/opt/homebrew/anaconda3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 540, in async_execute
    await self.async_execute_cell(
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# these are ok because different quotes are used inside the string.
print('1: Alice said "Hello!"')
print("2: Alice said 'Hello!'")
# these are ok because the inside quote is escaped.
print("3: Alice said \"Hello!\"")
print('4: Alice said \'Hello!\'')
# this is a syntax error because Python thinks the string ends before the H
print("5: Alice said "Hello!"")
------------------

[0;36m  File [0;32m"<ipython-input-2-9cabf25dbbfc>"[0;36m, line [0;32m8[0m
[0;31m    print("5: Alice said "Hello!"")[0m
[0m                          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-9cabf25dbbfc>, line 8)

